src-tauri/tests/snapshots/stream_bridge_elicitation__url_user_input_replays_without_polluting_pipeline.snap
---
source: tests/stream_bridge_elicitation.rs
assertion_line: 164
expression: snapshot
---
line_count: 3
control_events:
  - kind: userInputRequest
    message: Finish sign-in in the browser.
    modelId: opus-1m
    payload:
      kind: url
      url: "https://example.com/authorize"
    permissionMode: ~
    provider: claude
    resolvedModel: claude-opus-4-20250514
    sessionId: provider-session-1
    source: auth-server
    userInputId: user-input-url-1
    workingDirectory: /tmp/helmor
final_messages:
  - role: assistant
    id: msg-1
    content_length: 1
    content:
      - type: text
        text: Open the sign-in page.
    status:
      type: complete
      reason: stop
    streaming: ~
dropped_event_types: []
